SFC: Carta -> A4. Soluções csQCA pós leitura.

--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.org
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.org
@@ -3,7 +3,7 @@
 # #+AUTHOR: Lucas Teixeira \and Gabriel Petrini
 # #+EMAIL: Assistent Professor at University of Campinas (Brazil),  PhD Student at University of Campinas (Brazil)
 #+LATEX_CLASS: article
-#+LATEX_CLASS_OPTIONS: [12pt]
+#+LATEX_CLASS_OPTIONS: [12pt, a4]
 # #+LATEX_HEADER: \usepackage[document]{ragged2e}
 # #+LATEX_HEADER: \usepackage[none]{hyphenat} % Avoid hyphenization
 # #+LATEX_HEADER: \usepackage[right=3cm,left=3cm, footskip=0.25in]{geometry}
